fix css for correcting long line code breaks in pre-tags

--- a/builders/html/assets/css/base.css
+++ b/builders/html/assets/css/base.css
@@ -5867,9 +5867,11 @@ pre {
   line-height: 20px;
   margin: 12px 0;
   padding: 6px 8px;
-  word-break: break-all;
+  overflow-x: auto;
+  /* word-break: break-all;*/
   word-wrap: break-word;
-  white-space: pre-wrap;
+  white-space: pre;
+  
 }
 pre code {
   background-color: transparent;
@@ -11346,6 +11348,10 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
 .twitter-typeahead .tt-menu .tt-cursor {
   background-color: #bbdefb;
 }
+
+.twitter-typeahead .tt-menu.tt-open {
+    cursor: pointer
+  }
 
 .content {
   padding-bottom: 24px;
